2000-10-15  Radek Doulik  <rodo@helixcode.com>

	* htmltext.c (save_plain): cut down text from utf8 to 8bit before
	plain saving (this fixes anoying A^ for now, should be replaced
	later by text painter)

	* htmlclueflow.c (save_plain): replaced '\240' with ENTITY_NBSP to
	avoid compiler warnings and kill always true compares
	(save_plain): don't use unicode functions here, as text is not in
	utf8 now

2000-10-13  Lauris Kaplinski  <lauris@helixcode.com>

	* htmltokenizer.c: Renamed g_unichar_to_utf8 to html_unichar_to_utf8

2000-10-13  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-rule.c (html_rule_set): new function for setting
	rule parameters

2000-10-12  Larry Ewing  <lewing@helixcode.com>

	* htmlclueflow.c (save_plain): wrap the text contained within the
	clue.
	(plain_padding): helper function to determine line padding
	(string_append_len): helper funtion to encode write lengths of
	text.

	* htmlclue.c (save_plain): add arg.

	* htmltext.c (save_plain): add arg.

	* htmlobject.h: add width args to save_plain functions.

	* htmlobject.c (save_plain): add requested_width arg.
	(html_object_save_plain): add arg.

	* htmlengine-save.h: add prototype for save buffer functions.

	* htmlengine-save.c: added functions to create a save buffer to
	hold text before wrapping.
	
2000-10-12  Radek Doulik  <rodo@helixcode.com>

	* htmlrule.c (copy): copy also length and size

2000-10-11  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (CFLAGS): removed pspell flags
	(testgtkhtml_LDADD): removed pspell libs

2000-10-11  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-edit-selection-updater.c (extend_selection): handle
	the NULL obj here as well.

2000-10-10  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-edit-selection-updater.c (extend_selection): make
	sure tht we deal gracefully when next/prev leaf is NULL.

	* htmlobject.c (destroy): add code to poison destroyed memory.

2000-10-10  Radek Doulik  <rodo@helixcode.com>
